fix: missing color

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -217,7 +217,7 @@ h1 {
       transform: translate(-50%, -100%);
       width: 8vmin;
       height: 8vmin;
-      background-color: #6bf0ff;
+      background-color: rgb(255, 206, 0);
       filter: blur(10vmin);
     }
   }
